fixed colors on mobile nav header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -884,7 +884,7 @@ img.svg{
 	height: auto;
 	clear: both;
 	float: left;
-	background-color: #0f0f16;
+	background-color: #23387E;
 	padding: 20px 0px;
 }
 .glax_tm_mobile_bar_wrap .mobile_header_wrap .inner_wrap{
@@ -992,7 +992,7 @@ img.svg{
 	height: auto;
 	clear: both;
 	float: left;
-	background-color: #14141c;
+	background-color: #0E2424;
 	display: none;
 	padding: 43px 20px 42px 20px;
 }
